projects/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: projects
  annotations:
    external-dns.alpha.kubernetes.io/hostname: public.stoneforge.dev
    external-dns.public/enabled: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: public.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
